[package]
name="cheap-ichnaea"
version="0.2.3"
edition="2021"

[dependencies]
actix-web = "4"
async-std = "1.13.0"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
